--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 
 h2{
     font-family: 'Black Han Sans';
+    font-style: italic;
     font-weight: 400;
 }
 
@@ -36,7 +37,7 @@ a:hover{
 }
 
 #nav a img{
-    width: 150px; height: 100%;
+    height: 150%;
     background-color: transparent;
 }
 
@@ -67,6 +68,14 @@ a:hover{
     #nav a:hover::after{
         width: 100%;
     }
+}
+
+.scroll #nav{
+    background-color: #2e2e2e;
+}
+
+.scroll .logo{
+    filter: invert(100%) sepia(5%) saturate(24%) hue-rotate(251deg) brightness(106%) contrast(100%);
 }
 
 section{
